Add Student List Improved

--- a/src/main/webapp/WebContent/studentListImproved.html
+++ b/src/main/webapp/WebContent/studentListImproved.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
 	<title>Student List</title>
 	<link rel="stylesheet" type="text/css" href="../css/webAppExercises.css">
-	<script src="studentList.js"></script>
-
+	<script src="ajaxhelper.js"></script>
+	<script src="studentListImproved.js"></script>
 </head>
 
 <body>
